src/main/java/com/example/gitrepoexplorer/infrastructure/error/exceptions/RepositoryNotFoundException.java
package com.example.gitrepoexplorer.infrastructure.error.exceptions;

public class RepositoryNotFoundException extends RuntimeException{
    public RepositoryNotFoundException(String message){
        super(message);
    }
}
